--- a/Clase-10/Proyecto/Biblioteca/catalogo/templates/catalogo/index.html
+++ b/Clase-10/Proyecto/Biblioteca/catalogo/templates/catalogo/index.html
@@ -9,22 +9,28 @@
         <th>Fecha préstamo</th>
         <th>Fecha devolución</th>
         <th>Nombre</th>
+        {% if "eliminar" in grupos %}
         <th>Acciones</th>
+        {% endif %}
     </tr>
-    {% for r in registros %}
-<tr>
-        <td>{{ r.id }}</td>
-        <td>{{ r.titulo }}</td>
-        <td>{{ r.fechaPre }}</td>
-        <td>{{ r.fechaDev }}</td>
-        <td>{{ r.nombre }}</td>
+    {% for p in prestamos %}
+    {%  for l in p.libros.all %}
+    <tr>
+        <td class="text-right">{{ p.id }}</td>
+        <td>{{ l.titulo }}</td>
+        <td>{{ p.fechaPre }}</td>
+        <td>{{ p.fechaDev }}</td>
+        <td>{{ p.usuario.nombre }}</td>
+        {% if "eliminar" in grupos %}
         <td class="acciones">
             <a data-toggle="modal" data-target="#eliminaModal"
-                data-url="/prestamo/id/libros/elimina/id/">
+                data-url="/prestamo/{{ p.id }}/libros/elimina/{{ l.id }}/">
                 <i class="icon-cross"></i>
             </a>
         </td>
+        {% endif %}
     </tr>
+    {%   endfor %}
     {% endfor %}
 </table>
 {% endblock %}
